# ObjectDetection

./: .gitignore  LICENSE  __init__.py  test.py
api/: README.md
api/protos/services/: service.proto
kafka/: README.md  camera.py  client_consumer.py  client_producer.py  pyproject.toml  worker_consumer.py
kafka-server/: README.md  pyproject.toml
kafka-server/getting-started/: consumer.py  producer.py
kafka/getting-started/: create_topic.py
kafka/getting-started/documentation/: admin.py  consumer.py  producer.py
kafka/schema/: frames.avsc
plugins/: mp4_reader.py  pyproject.toml
yoloV8/: README.md  __init__.py  getting_started.ipynb  pyproject.toml
yoloV8/annotation/: predict.py  pridiction.py  train_model.py
yoloV8/datasets/road_sign_data/: data.yaml
yoloV8/datasets/road_sign_data/train/: labels.cache
yoloV8/datasets/road_sign_data/valid/: labels.cache
yoloV8/runs/detect/train/: args.yaml
yoloV8/runs/detect/train10/: args.yaml
yoloV8/runs/detect/train2/: args.yaml
yoloV8/runs/detect/train3/: args.yaml
yoloV8/runs/detect/train4/: args.yaml
yoloV8/runs/detect/train5/: args.yaml
yoloV8/runs/detect/train6/: args.yaml
yoloV8/runs/detect/train7/: args.yaml
yoloV8/runs/detect/train8/: args.yaml
yoloV8/runs/detect/train9/: args.yaml
