[tool.poetry]
name = "plugins"
version = "0.1.0"
description = "video plugins"
authors = ["palashkhare009 <palashkhare009@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
