[tool.poetry]
name = "yolov8"
version = "0.1.0"
description = ""
authors = ["palashkhare009 <palashkhare009@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
ultralytics = "^8.2.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
